--- a/src/css/components/card-long.css
+++ b/src/css/components/card-long.css
@@ -43,7 +43,7 @@
   color: var(--f-k-smk-x);
   position: relative;
 }
-.card-long-mask {
+.card-long--inactive {
   opacity: 0.6;
 }
 .card-long__link {
