--- a/src/css/components/cards/card.css
+++ b/src/css/components/cards/card.css
@@ -9,7 +9,7 @@
   margin-inline-end: var(--mie, calc(-1 * var(--contentscroller_peek, 32px)));
   place-self: var(--contentscroller_scroller_place-self, auto);
 }
-.card__carousel-slides[class][class] {
+.card__slides[class][class] {
   contain: var(--contentscroller_contain);
   contain-intrinsic-size: var(--contentscroller_contain-intrinsic-size);
   content-visibility: var(--contentscroller_content-visibility);
@@ -50,7 +50,7 @@
     margin-top: 16px;
   }
 }
-.card__carousel-slides[class][class] {
+.card__slides[class][class] {
   contain: var(--contentscroller_contain);
   contain-intrinsic-size: var(--contentscroller_contain-intrinsic-size);
   content-visibility: var(--contentscroller_content-visibility);
@@ -88,18 +88,18 @@
   touch-action: var(--contentscroller_touch-action, pan-x pan-y pinch-zoom);
 }
 @supports not (aspect-ratio: 1 / 1) {
-  .card__carousel-slides-wrapper[class][class] {
+  .card__slides-wrapper[class][class] {
     position: absolute;
     height: 100%;
     width: 100%;
     top: 0;
     bottom: 0;
   }
-  .dir-ltr.card__carousel-slides-wrapper[class][class] {
+  .dir-ltr.card__slides-wrapper[class][class] {
     left: 0;
     right: 0;
   }
-  .dir-rtl.card__carousel-slides-wrapper[class][class] {
+  .dir-rtl.card__slides-wrapper[class][class] {
     right: 0;
     left: 0;
   }
@@ -131,7 +131,7 @@
   pointer-events: var(--contentscroller_controls_pointer-events);
   z-index: var(--contentscroller_controls_z-index, auto);
 }
-.card__carousel-slides[class][class] {
+.card__slides[class][class] {
   contain: var(--contentscroller_contain);
   contain-intrinsic-size: var(--contentscroller_contain-intrinsic-size);
   content-visibility: var(--contentscroller_content-visibility);
@@ -176,12 +176,12 @@
   scrollbar-width: none;
   touch-action: var(--contentscroller_touch-action, pan-x pan-y pinch-zoom);
 }
-.dir.card__carousel-slides[class][class] {
+.dir.card__slides[class][class] {
   margin: 0;
 }
 @supports (-webkit-scroll-behavior: smooth) or (-moz-scroll-behavior: smooth) or
   (-ms-scroll-behavior: smooth) or (scroll-behavior: smooth) {
-  .card__carousel-slides[class][class] {
+  .card__slides[class][class] {
     -webkit-scroll-snap-type: var(
       --contentscroller_scrollsnaptype,
       inline mandatory
@@ -197,7 +197,7 @@
     scroll-snap-type: var(--contentscroller_scrollsnaptype, inline mandatory);
   }
 }
-.card__carousel-slides[class][class] > :nth-child(n) {
+.card__slides[class][class] > :nth-child(n) {
   -webkit-scroll-snap-align: var(--contentscroller_scrollsnapalign, start);
   -moz-scroll-snap-align: var(--contentscroller_scrollsnapalign, start);
   -ms-scroll-snap-align: var(--contentscroller_scrollsnapalign, start);
@@ -220,32 +220,32 @@
   width: 1px;
 }
 @supports (aspect-ratio: 1 / 1) {
-  .card__carousel-wrapper[class][class] {
+  .card__carousel[class][class] {
     aspect-ratio: var(--aspect_ratio_wrapper-ratio, unset);
   }
 }
 @supports not (aspect-ratio: 1 / 1) {
-  .card__carousel-wrapper[class][class] {
+  .card__carousel[class][class] {
     position: var(--aspect_ratio_wrapper-position_fallback, unset);
   }
-  .dir.card__carousel-wrapper[class][class] {
+  .dir.card__carousel[class][class] {
     padding-top: var(--aspect_ratio_wrapper-padding_fallback, 0);
   }
 }
-.card__carousel-slides-wrapper[class][class] {
+.card__slides-wrapper[class][class] {
   height: 100%;
   min-width: 0;
   position: unset;
 }
 @supports not (aspect-ratio: 1 / 1) {
-  .card__carousel-slides-wrapper[class][class] {
+  .card__slides-wrapper[class][class] {
     position: absolute;
     height: 100%;
     width: 100%;
     top: 0;
     bottom: 0;
   }
-  .dir.card__carousel-slides-wrapper[class][class] {
+  .dir.card__slides-wrapper[class][class] {
     left: 0;
     right: 0;
   }
@@ -288,7 +288,7 @@
     'header' 'scroller' 'footer' / minmax(0, 1fr)
   );
 }
-.card__carousel-slides[class][class] {
+.card__slides[class][class] {
   contain: var(--contentscroller_contain);
   contain-intrinsic-size: var(--contentscroller_contain-intrinsic-size);
   content-visibility: var(--contentscroller_content-visibility);
@@ -316,7 +316,7 @@
   scrollbar-width: none;
   touch-action: var(--contentscroller_touch-action, pan-x pan-y pinch-zoom);
 }
-.dir.card__carousel-slides[class][class] {
+.dir.card__slides[class][class] {
   margin: 0;
   padding-inline-start: var(
     --contentscroller_padding-inline-start,
@@ -328,14 +328,14 @@
   );
 }
 @supports (scroll-behavior: smooth) {
-  .card__carousel-slides[class][class] {
+  .card__slides[class][class] {
     scroll-snap-type: var(--contentscroller_scrollsnaptype, inline mandatory);
   }
 }
-.card__carousel-slides[class][class]::-webkit-scrollbar {
+.card__slides[class][class]::-webkit-scrollbar {
   display: none;
 }
-.card__carousel-slides[class][class] > :nth-child(n) {
+.card__slides[class][class] > :nth-child(n) {
   scroll-snap-align: var(--contentscroller_scrollsnapalign, start);
   scroll-snap-stop: var(--contentscroller_scrollsnapstop, normal);
 }
